--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Game402"
         tools:targetApi="31">
         <activity
+            android:name=".ui.theme.DreamVideoActivty"
+            android:exported="false"
+            android:label="@string/title_activity_dream_video_activty"
+            android:theme="@style/Theme.Game402" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
