--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,12 @@
         android:theme="@style/Theme.Game402"
         tools:targetApi="31">
         <activity
-            android:name=".ui.theme.DreamVideoActivty"
+            android:name=".GameActivity"
+            android:exported="false"
+            android:label="@string/title_activity_game"
+            android:theme="@style/Theme.Game402" />
+        <activity
+            android:name=".DreamVideoActivty"
             android:exported="false"
             android:label="@string/title_activity_dream_video_activty"
             android:theme="@style/Theme.Game402" />
